--- a/microservice-users/package.json
+++ b/microservice-users/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/ABWassim/USI-MarseilleCity#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^4.1.4"
   }
 }
