--- a/microservice-videos/package.json
+++ b/microservice-videos/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/ABWassim/USI-MarseilleCity#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "googleapis": "^91.0.0",
+    "vimeo": "^2.1.1"
   }
 }
