--- a/microservice-videos/package.json
+++ b/microservice-videos/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/ABWassim/USI-MarseilleCity#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "googleapis": "^91.0.0",
