--- a/microservice-playlists/package.json
+++ b/microservice-playlists/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/ABWassim/USI-MarseilleCity#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^4.1.4"
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.4",
+    "mongoose": "^6.0.12"
   }
 }
