--- a/microservice-users/package.json
+++ b/microservice-users/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.4"
+    "mongodb": "^4.1.4",
+    "sha256": "^0.2.0"
   }
 }
