--- a/microservice-adverts/package.json
+++ b/microservice-adverts/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "microservice-adverts",
+  "name": "cloudinary_image_management_nodejs",
   "version": "1.0.0",
-  "description": "Advertising",
-  "main": "index.js",
+  "description": "Simple back-end app for image management using cloudinary api",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+    "test": "test"
   },
-  "author": "Wassim Ahmed-Belkacem - Emie Delepine",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aligredo/Cloudinary-Image-Management-with-Node.js-Angular4.git"
+  },
+  "keywords": [
+    "cloudinary",
+    "nodejs",
+    "imageupload"
+  ],
+  "author": "Ali Ahmed (@aligredo)",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aligredo/Cloudinary-Image-Management-with-Node.js-Angular4/issues"
+  },
+  "homepage": "https://github.com/aligredo/Cloudinary-Image-Management-with-Node.js-Angular4#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.18.2",
+    "cloudinary": "^1.11.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "gridfs-stream": "^1.1.1",
-    "method-override": "^3.0.0",
-    "mongoose": "^6.0.13",
-    "multer": "^1.4.3",
-    "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^2.0.15"
+    "debug": "^3.1.0",
+    "express": "^4.16.3",
+    "mongodb": "^4.2.0",
+    "multer": "^1.3.0",
+    "multer-storage-cloudinary": "^2.2.1",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0"
   }
 }
