--- a/microservice-adverts/package.json
+++ b/microservice-adverts/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "cloudinary": "^1.11.0",
     "cookie-parser": "^1.4.6",
+    "jsonwebtoken": "^8.5.1",
     "cors": "^2.8.5",
     "debug": "^3.1.0",
     "express": "^4.16.3",
