--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-extensions/select-country": "^5.1.0",
     "@angular/animations": "~11.2.0",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.0",
@@ -25,7 +26,9 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.7.0",
+    "bootstrap-select-country": "^4.2.0",
     "rxjs": "~6.6.0",
+    "svg-country-flags": "^1.2.10",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
