--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,9 @@ services:
     image: backend-adverts
     ports:
       - 3003:3003
+
+  frontend:
+    restart: on-failure
+    image: frontend
+    ports:
+      - 4200:80
